--- a/templates/blog/blog_categories.html
+++ b/templates/blog/blog_categories.html
@@ -2,13 +2,7 @@
 
 
 {% block content %}
-
-
 {% if category_blogs %}
-
-
-
-
 <div class="container-fluid blog-pic">
     <div class="row mx-4">
         <!-- Blog Entries Column -->
@@ -62,7 +56,29 @@
             </div>
         </div>
         {% else %}
-        <h1>Sorry this page is now exist</h1>
-        <a class="text-wht aw pl-2 btn btn-success" href="{% url 'home' %}">Home</a>
+        <div id="about-pic">
+            <div class="container about">
+                <div class="overlay">
+                    <div class="col p-4">
+                        <p class="text-wht aw display-3 text-center">Focus Fitness</p>
+                        <h3 class="text-wht text-center">We have no Blogs in this Categorry</h3>
+                        <div class="row d-flex flex-row">
+                            <div class="col-12">
+                                <span>
+                                    <a class=" my-2 w-100 text-wht aw px-4 btn btn-warning"
+                                        href="{% url 'blog:list' %}">Back to Blogs</a>
+                                </span>
+                                <span>
+                                    <a class="my-2 w-100 text-wht aw px-4 btn btn-success"
+                                        href="{% url 'home' %}">Home</a>
+                                </span>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         {% endif %}
         {% endblock content %}
