--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -48,7 +48,7 @@
             <hr>
 
             <!-- Post Content -->
-            <p class="lead">{{ blog.content }}</p>
+            <p class="lead">{{ blog.content|safe }}</p>
             <hr>
             <p class="">If you like the Post, give it a
                 <a class="text-muted" href="{{ blog.get_like_url }}">
@@ -88,15 +88,8 @@
             </div>
             <hr>
             {% endfor %}
-
         </div>
-
-        <!-- Sidebar Widgets Column -->
-
-
     </div>
-    <!-- /.row -->
-
 </div>
 <!-- /.container -->
 
