--- a/templates/profiles/profile_details.html
+++ b/templates/profiles/profile_details.html
@@ -26,7 +26,7 @@
                 <div class="col-md-6 col-12  bg-black-a rounded-15">
                     <h5 class="aw text-ylw text-center">Shipping details</h5>
                     <div class="profile-overlay">
-                        <form method="POST" action="" class="form-dark my-2" id="shipping-update-form">
+                        <form method="POST" action="" class=" my-2" id="shipping-update-form">
                             {% csrf_token %}
                             {{ form|crispy }}
                             <button type="submit"
