--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -147,6 +147,7 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card w-100 h-100 border-1">
 
+                                {% if product.in_stock == True %}
                                 {% if product.image %}
                                 <a class="mx-auto" href="{% url 'product_detail' product.id %}">
                                     <img class="mx-auto card-img-top shop-card-top-img img-fluid"
@@ -158,12 +159,17 @@
                                         src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
+                                {% else %}
+                                <a class="mx-auto" href="">
+                                    <img class="mx-auto card-img-top shop-card-top-img img-fluid"
+                                        src="{% static 'images/out-of-stock.png' %}" alt="{{ product.name }}">
+                                </a>
                                 <div class="card-body pb-0">
                                     <p class="aw text-center">{{ product.name }}</p>
                                 </div>
 
-
-                                {% if products.in_stock %}
+                                {% endif %}
+                                {% if product.in_stock == True %}
                                 <div class="card-footer bg-white pt-0 border-0 text-center">
                                     <div class="row ">
                                         <div class="col">
@@ -187,7 +193,10 @@
                                     </div>
                                 </div>
                                 {% else %}
-                                <p>sorry out of stock</p>
+                                <p class="aw text-center">Sorry Out Of Stock</p>
+
+
+
                                 {% endif %}
 
 
