added editable list to admin and new field to product model

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -13,3 +13,11 @@
     font-family: "audiowide", sans-serif;
     color: rgb(251, 252, 250);
 }
+
+h1 {
+    font-family: "Audiowide", sans-serif;
+}
+
+#content-main {
+    font-family: "Audiowide", sans-serif;
+}
