--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -11,7 +11,7 @@
         </div>
     </div>
 </div>
-{{ shop_items }}
+{{ sale_items }}
 <section id="section1">
     <div id="section1-pic">
         <div class="spaces-1"></div>
