added dynamic blogs in blog list

--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -25,7 +25,9 @@
             <div class="overlay">
                 <h1 class="my-4 aw text-wht text-center">Featured Blogs</h1>
             </div>
+
             {% for blog in object_list %}
+            {% if blog.featured == True %}
             <!-- Blog Post -->
             <a href="{{ blog.get_absolute_url }}" class="text-bk">
                 <div class="card mb-4">
@@ -33,7 +35,7 @@
                     <div class="card-body">
                         <h2 class="aw card-title">{{ blog.title|title }}</h2>
                         <a href="{% url 'blog:category' blog.category %}"><small
-                                class="text-muted">{{ blog.category }}</small></a>
+                                class="text-muted">{{ blog.category }}{{ blog.featured }}</small></a>
                         <p class="card-text">{{ blog.content|safe|truncatechars:200 }}</p>
                         <div class="row m-1">
                             <div class="col-md-4 col-sm-12"><span><i class="fad fa-eye"></i>
@@ -49,6 +51,7 @@
             Posted on: {{ blog.publish_date}} by <strong>{{ blog.author|title }}</strong>
         </div>
     </div>
+    {% endif %}
     {% endfor %}
     <!-- 
     <!-- Pagination -->
@@ -102,15 +105,17 @@
         <div class="overlay">
             <h5 class="aw card-header text-wht text-center">All Blogs</h5>
         </div>
-        {% for object in object_list %}
+        {% for blog in object_list %}
+        {% if blog.featured != True %}
         <div class="overlay">
             <div class="card-body ">
                 <a href="{{ object.get_absolute_url }}">
-                    <h5 class="aw text-center text-wht">{{ object.title }}</h5>
-                    <p class="text-wht">{{ object.content|truncatechars:50 }}</p>
+                    <h5 class="aw text-center text-wht">{{ blog.title }}</h5>
+                    <p class="text-wht">{{ blog.content|truncatechars:50 }}</p>
                 </a>
             </div>
         </div>
+        {% endif %}
         {% endfor %}
 
     </div> -->
