--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -33,9 +33,9 @@
                 <div class="card mb-4">
                     <img class="card-img-top" src="{{ blog.thumbnail.url }}" alt="Card image cap">
                     <div class="card-body">
-                        <h2 class="aw card-title">{{ blog.title|title }}</h2>
-                        <a href="{% url 'blog:category' blog.category %}"><small
-                                class="text-muted">{{ blog.category }}{{ blog.featured }}</small></a>
+                        <h2 class="aw text-center card-title">{{ blog.title|title }}</h2>
+                        <a href="{% url 'blog:category' blog.category %}"><small class="text-muted">Category:
+                                {{ blog.category }}</small></a>
                         <p class="card-text">{{ blog.content|safe|truncatechars:200 }}</p>
                         <div class="row m-1">
                             <div class="col-md-4 col-sm-12"><span><i class="fad fa-eye"></i>
@@ -99,26 +99,25 @@
             </div>
         </div>
     </div>
-
+    {% for blog in object_list %}
+    {% if blog.featured != True %}
     <!-- Side Widget -->
-    <div class="card my-4 bg-trans">
-        <div class="overlay">
-            <h5 class="aw card-header text-wht text-center">All Blogs</h5>
+    <div class="card my-4 ">
+        <h5 class="aw card-header text-bk text-center">All Blogs</h5>
+        <div class="card-body ">
+            <a class="text-bk" href="{{ object.get_absolute_url }}">
+                <h5 class="aw text-center ">{{ blog.title|title }}</h5>
+                <a href="{% url 'blog:category' blog.category %}"><small class="text-muted">Category:
+                        {{ blog.category }}</small></a>
+                <p class="text-bk">{{ blog.content|truncatechars:50 }}</p>
+            </a>
         </div>
-        {% for blog in object_list %}
-        {% if blog.featured != True %}
-        <div class="overlay">
-            <div class="card-body ">
-                <a href="{{ object.get_absolute_url }}">
-                    <h5 class="aw text-center text-wht">{{ blog.title }}</h5>
-                    <p class="text-wht">{{ blog.content|truncatechars:50 }}</p>
-                </a>
-            </div>
-        </div>
-        {% endif %}
-        {% endfor %}
+    </div>
+</div>
+{% endif %}
+{% endfor %}
 
-    </div> -->
+</div> -->
 
 </div>
 <!-- /.row -->
