--- a/templates/blog/blog_categories.html
+++ b/templates/blog/blog_categories.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class="container-fluid bg-black">
+<div class="container-fluid bg-black fixed-top crumbs">
     <div class="row">
         <div class="col-md-12 mb-0">
             <a class="text-wht aw pl-2" href="{% url 'blog:list' %}">Blogs</a>
