--- a/templates/cartold/product_list.html
+++ b/templates/cartold/product_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="container-fluid bg-black">
+<div class="container-fluid bg-black fixed-top crumbs">
     <div class="row">
         <div class="col-md-12 mb-0">
             <a class="text-wht aw" href="{% url 'home' %}">Home</a>
