--- a/templates/cartold/checkout.html
+++ b/templates/cartold/checkout.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container-fluid bg-black">
+<div class="container-fluid bg-black fixed-top crumbs">
     <div class="row">
         <div class="col-md-12 mb-0">
             <a class="text-wht aw" href="{% url 'home' %}">Home</a>
