--- a/templates/cartold/product_detail.html
+++ b/templates/cartold/product_detail.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="container-fluid bg-black">
+<div class="container-fluid bg-black fixed-top crumbs">
     <div class="row">
         <div class="col-md-12 mb-0">
             <a class="text-wht aw" href="{% url 'cart:product-list' %}">Shop</a>
