--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -11,7 +11,7 @@
         <!-- <div class="overlay my-5"> -->
         <div class="col p-4 ">
             <div class="headings-center">
-                <div class="row ">
+                <div class="row fixed-top crumbs">
                     <div class="col-md-12 mb-0">
                         <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
                         <span class="mx-2 mb-0 text-wht">/</span>
