--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="container-fluid bg-black">
+<div class="container-fluid bg-black fixed-top crumbs">
     <div class="row">
         <div class="col-md-12 mb-0">
             <a class="text-wht aw" href="{% url 'home' %}">Home</a>
@@ -141,9 +141,6 @@
 
                     <div class="row ">
                         {% for product in products %}
-
-
-
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card w-100 h-100 border-1">
 
