--- a/static/css/style.css
+++ b/static/css/style.css
@@ -462,6 +462,7 @@ nav {
   background-size: cover;
 } */
 
+
 .product-overlay {
   background-color: rgb(255, 255, 255);
   width: 100%;
@@ -669,11 +670,13 @@ nav {
 
 /* Footer */
 .footer-image {
-  background: url(/static/images/evan-wise-blog-bg.jpg) no-repeat center center fixed;
+  /* background: url(/static/images/evan-wise-blog-bg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+ */
+  background-color: black;
 }
 
 .feet-bg {
