--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -11,12 +11,12 @@
         </div>
     </div>
 </div>
-<div class="container-shop">
-    <div class="container product-overlay">
+<div class="container-shop ">
+    <div class="container-fluid  blog-image">
         <div class="container">
             <div class="row">
                 <div class="col text-center mt-3">
-                    <h2 class="aw">Products</h2>
+                    <h2 class="display-4 aw text-wht p-3">Products</h2>
 
                 </div>
             </div>
@@ -129,9 +129,9 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-6 order-md-first">
-                            <p class="text-muted mt-3 text-center text-md-left">
+                            <p class=" mt-3 text-center text-wht text-md-left">
                                 {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
+                                <span class="small "><a href="{% url 'products' %}">All Products </a> | </span>
                                 {% endif %}
                                 {{ products|length }} Products{% if search_term %} found for
                                 <strong>"{{ search_term }}"</strong>{% endif %}
